--- a/react-app/src/components/User.css
+++ b/react-app/src/components/User.css
@@ -80,3 +80,23 @@
     width: 100%;
     height: 100%;
 }
+
+@media screen and (max-width: 1000px) {
+    #user-content {
+        width: 1440px;
+        height: 100%;
+    }
+    .level-num {
+        border: none;
+        margin-left: 5px;
+    }
+    #pfp-container {
+        display: flex;
+        justify-content: center;
+        padding-right: 40px;
+    }
+    #upload-pic-form {
+        margin-left: 300px;
+        margin-bottom: 50px;
+    }
+}
