--- a/react-app/src/components/About/index.css
+++ b/react-app/src/components/About/index.css
@@ -171,3 +171,17 @@ body {
   color: #000303;
   font-size: 100px;
 }
+
+@media screen and (max-width: 1440px) and (max-height: 800px) {
+  #user-content-jd {
+    width: 100vw;
+    height: 1080px;
+  }
+}
+
+@media screen and (max-width: 1000px) {
+  #user-content-jd {
+    width: 100vw;
+    height: 1080px;
+  }
+}
