--- a/react-app/src/components/User.css
+++ b/react-app/src/components/User.css
@@ -81,6 +81,14 @@
     height: 100%;
 }
 
+@media screen and (max-width: 1440px) and (max-height: 800px) {
+    #user-content {
+      position: relative;
+      width: 75vw;
+      height: 100%;
+    }
+  }
+
 @media screen and (max-width: 1000px) {
     #user-content {
         width: 1440px;
