--- a/react-app/src/components/LandingPage/index.css
+++ b/react-app/src/components/LandingPage/index.css
@@ -114,7 +114,7 @@
 
 @media (max-width: 1440px) {
   #signup_page_content {
-    height: 100vh;
+    height: 135vh;
   }
 
   #page_content {
@@ -126,6 +126,18 @@
   }
 }
 @media screen and (max-width: 1000px) {
+  #page_content {
+    height: 140vh;
+  }
+}
+
+@media screen and (max-width: 1920px) and (max-height: 1080px) {
+  #page_content  {
+    height: 100vh;
+  }
+}
+
+@media screen and (min-width: 1440px) {
   #page_content {
     height: 100vh;
   }
